# cfproxy

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  cloudflare.rs  cloudflared.rs  config.rs  diff.rs  doctor.rs  error.rs  event.rs  har.rs  main.rs  metrics.rs  mock.rs  proxy.rs  purge.rs  qr.rs  settings.rs  setup.rs  tunnel.rs
src/ui/: detail.rs  helpers.rs  mod.rs  overlays.rs  render.rs  requests.rs  state.rs
tests/: integration.rs
